--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
     gtmData.page_layout = pageLayout;
     dataLayer.push(gtmData);
 
-
+    alert('Sabías que mucha de las cerámicas mochicas eran depositadas como ofrenda para los muertos! Aquí te lo explicamos mejor. Pero espera! Parece que algo no anda bien en este lugar !!')
+    console.log('Fail, parece que no es por aquí :c pepepepepee..! Losgraste solucionar los problemas de la página ?')
 
 
   </script>
@@ -231,7 +232,11 @@
   <script type="text/javascript" async="" src="./mochica-en-nttdata_files/f(8).txt"></script>
 </head>
 
-<body>
+<body 
+  style="
+      opacity: 0.1;
+      pointer-events: none;
+  ">
   <div style="display:none;" data-svg=""
     data-svg-path="https://www.rijksmuseum.nl/statics/generated/rijks-icons.svg?v=AU_ntbeZxI5ZPYF5GGR5h2w3H1xZI2Lr8-9zfc06a78">
     <svg xmlns="http://www.w3.org/2000/svg">
@@ -693,11 +698,10 @@
                   Giftshop
                 </span></a>
             </li>
-            <li class="header-link header-cta"><a href="#" class="button button-primary">
+            <li class="header-link header-cta"><a href="#" onclick="alert('Alguien ha saboteado esta página, pero hemos reguardado los testimonios en nuestras redes en algún lado de aquí!! Apurate encuentra en enlace !!! ')" class="button button-primary">
                 Muchick tickets
               </a>
             </li>
-            <!---->
           </ul>
         </nav>
       </header>
@@ -748,7 +752,6 @@
             investigación y el anfiteatro. Este espacio cultural, no solo es un museo de sitio para la exhibición de los
             objetos encontrados en las excavaciones arqueológicas, sino también un centro de investigación y desarrollo
             comunal. El museo tiene un diseño autodidacta.
-            .
           </p>
           <button aria-expanded="false" aria-controls="expander-content" tabindex="0"
             class="link link-inverse drop-down">
@@ -3283,8 +3286,7 @@
                                           </a>
                                         </div>
                                         <div class="block-half-width">
-                                          <a href="https://s3.amazonaws.com/media.greatplacetowork.com/peru/best-workplaces-in-peru/2023/3-mas-de-1000/24-ntt-data/foto-01.jpg"
-                                            class="fit-parent object-fit-container cover block-link">
+                                          <div class="fit-parent object-fit-container cover">
                                             <div class="background-image fit-parent object-fit-container cover"
                                               style="background-size: cover; background-position: center center;">
                                               <picture>
@@ -3299,9 +3301,14 @@
                                             </div>
                                             <div class="block-content grid-row">
                                               <div class="grid-column fit-width-content block-content-wrapper">
-                                                <h2 class="heading-2"><span class="inline-link inline-link-inverse">
-                                                    Empresas que nos visitan
-                                                  </span></h2>
+                                                <a href="https://engage.cloud.microsoft/main/groups/eyJfdHlwZSI6Ikdyb3VwIiwiaWQiOiIxOTk1MTUxMDMyMzIifQ/all" class="">
+                                                  <h2 class="heading-2"><span class="inline-link inline-link-inverse">
+                                                      Empresas que nos visitan
+                                                    </span>
+                                                  </h2>
+                                                </a>
+                                              </div>
+
                                                 <p class="block-content-subtitle">
                                                   En el mes
                                                 </p>
@@ -4790,7 +4797,7 @@
       </p>
     </div>
   </div></a></div>
-  <div class="block-half-width"><a href="#" class="fit-parent object-fit-container cover block-link">
+  <div class="block-half-width">
       <div class="background-image fit-parent object-fit-container cover"
         style="background-size: cover; background-position: center center;">
         <picture>
@@ -4813,15 +4820,18 @@
       </div>
       <div class="block-content grid-row">
         <div class="grid-column fit-width-content block-content-wrapper">
-          <h2 class="heading-2"><span class="inline-link inline-link-inverse">
+          <a href="#https://engage.cloud.microsoft/main/org/everis.com/threads/eyJfdHlwZSI6IlRocmVhZCIsImlkIjoiMjk2MTMwOTcwMjEwMzA0MCJ9?trk_copy_link=V2" 
+          class=" cover block-link">
+            <h2 class="heading-2"><span class="inline-link inline-link-inverse">
               Empresas que nos visitan
             </span></h2>
-          <p class="block-content-subtitle">
-            En el mes
-          </p>
+            <p class="block-content-subtitle">
+              En el mes
+            </p>
+          </a>
+
         </div>
       </div>
-    </a>
   </div>
   </section>
   </main>
