--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
     gtmData.page_layout = pageLayout;
     dataLayer.push(gtmData);
 
-    alert('Sabías que mucha de las cerámicas mochicas eran depositadas como ofrenda para los muertos! Aquí te lo explicamos mejor. Pero espera! Parece que algo no anda bien en este lugar !!')
-    console.log('Fail, parece que no es por aquí :c pepepepepee..! Losgraste solucionar los problemas de la página ?')
+    alert('Sabías que mucha de las cerámicas mochicas eran depositadas como ofrenda para los muertos!Pero espera! Parece que algo no anda bien en este lugar, nos quieren sabotear !!')
+    console.log('Fail, parece que no es por aquí :c pepepepepee..! Losgraste solucionar los problemas de la página ? El museo desconoce quien es el responsable de esto !')
 
 
   </script>
@@ -698,7 +698,7 @@
                   Giftshop
                 </span></a>
             </li>
-            <li class="header-link header-cta"><a href="#" onclick="alert('Alguien ha saboteado esta página, pero hemos reguardado los testimonios en nuestras redes en algún lado de aquí!! Apurate encuentra en enlace !!! ')" class="button button-primary">
+            <li class="header-link header-cta"><a href="#" onclick="alert('Alguien ha saboteado esta página, pero hemos ocultado la evidencia muy bien en algún lado de este sistio!! Apurate encuentra en enlace !!! ')" class="button button-primary">
                 Muchick tickets
               </a>
             </li>
